# streek-data-etl

./: .dockerignore  .env.example  .isort.cfg  .python-version  Dockerfile  Makefile  README.md  api-docs-my-project.html  docker-compose.yml  generate_html.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/config/: database.py  settings.py
app/crud/: item.py
app/models/: item.py
app/routers/: cliff.py  streek.py
app/schemas/: item.py
dev/dump/: sample.dump  sample.sql
scripts/: create_virtualenv.sh  data_dump.py  format.sh
tests/: test_routes.py
